--- a/build.gradle
+++ b/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:2.+"
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
 }
